[package]
name = "blockhain-platform"
version = "0.1.0"
authors = ["Levon <levon.mesropyan@orchestra.group>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.19.0"
anyhow = "1.0.31"
async-std = "< 1.6"
futures = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }